--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./Portfolio.html">WebStudio</a>
 
         <ul>
           <li><a href="Studio">Studio</a></li>
