--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./portfolio.html">WebStudio</a>
 
         <ul>
           <li><a href="Studio">Studio</a></li>
@@ -55,9 +55,6 @@
               alt="ButtonMarketing"
               width="126"
             />
-          </li>
-          <li>
-            <img src="./images/Finger.jpg" alt="Finger" width="16" />
           </li>
         </ul>
       </section>
